feat(auth): add account deletion
